# structype_derive

./: .travis.yml  Cargo.toml  LICENSE  Readme.md
src/: lib.rs
tests/: derive_tests.rs  parse_pass.rs
