[package]
name = "structype_derive"
version = "3.0.0"
authors = ["nohupped_arch <nohupped@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/nohupped/structype_derive"
license = "MIT"
keywords = ["macro", "derive", "procmacro", "attribute", "types"]
description = "A derive macro crate that lets you view an allowed type's fields and will let you over-ride it."

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.60", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
serde_json = "1.0.62"
structype = "3.0.0"


[dev-dependencies]
trybuild = "1.0.41"

[[test]]
name = "tests"
path = "tests/derive_tests.rs"
